build: add dockerfile for dicovery server

--- a/discovery.server/build.gradle
+++ b/discovery.server/build.gradle
@@ -13,6 +13,11 @@ java {
 	}
 }
 
+jar{
+	manifest {
+		attributes 'Main-Class': 'org.edu.ifmg.eurekaserver.EurekaServerApplication'
+	}
+}
 repositories {
 	mavenCentral()
 }
