--- a/gateway/docker/Dockerfile
+++ b/gateway/docker/Dockerfile
@@ -7,6 +7,9 @@ RUN gradle build
 FROM eclipse-temurin:21-jre-alpine
 WORKDIR /app
 COPY --from=gradle-build ./home/gradle/src/build/libs/*.jar ./app.jar
-EXPOSE 8761
+EXPOSE 8081
+
+ENV DISCOVERY_SERVER_PORT=8187
+ENV DISCOVERY_SERVER_URL=discovery-inst
 
 ENTRYPOINT ["java", "-jar", "app.jar"]
