--- a/discovery.server/src/main/resources/application.properties
+++ b/discovery.server/src/main/resources/application.properties
@@ -2,4 +2,5 @@ spring.application.name=discovery.server
 server.port=8761
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
+eureka.client.healthcheck.enabled=true
 
