--- a/cloud-config/server/client.yml
+++ b/cloud-config/server/client.yml
@@ -2,10 +2,10 @@ spring:
   datasource:
     platform: postgres
     driverClassName: org.postgresql.Driver
-    url: jdbc:postgresql://localhost:5432/postgres
+    url: jdbc:postgresql://postgres-client-inst:5432/postgres
     username: postgres
     password: postgres
   jpa:
     database: POSTGRESQL
     hibernate:
-        ddl-auto: update
+      ddl-auto: update
