--- a/cloud-config/src/main/resources/application.properties
+++ b/cloud-config/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 spring.application.name=cloud-config
 server.port=7000
-spring.cloud.config.server.native.search-locations=/home/igorguilhermedev/Workspace/personal/ESOF2/cloud-config/server
+spring.cloud.config.server.native.search-locations=${CONFIG_SERVER_FILE}
 spring.profiles.active=native
 
 eureka.client.fetch-registry=true
 eureka.client.register-with-eureka=true
-eureka.client.service-url.defaultZone= http://localhost:8761/eureka
-eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
+eureka.client.service-url.defaultZone= http://${DISCOVERY_SERVER_URL}:${DISCOVERY_SERVER_PORT}/eureka
+
+
