--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,8 @@ services:
       - "5433:5432"
     volumes:
       - ./postgres-data-animal:/var/lib/postgresql/data
+    networks:
+      - postgres-animal
 
   postgres-client:
     image: postgres:15.2
@@ -36,7 +38,7 @@ services:
       test: [ "CMD", "wget", "--spider", "http://${DISCOVERY_SERVER_URL}:${DISCOVERY_SERVER_PORT}/eureka/apps/cloud-config"]
       interval: 5s
       timeout: 5s
-      retries: 15
+      retries: 150
     ports:
       - "7000:7000"
     environment:
@@ -48,6 +50,7 @@ services:
     networks:
       - discovery-cloud-server-network
       - config-client
+      - config-animal
 
   msclient:
     container_name: ms-client-inst
@@ -59,7 +62,7 @@ services:
       test: ["CMD", "wget", "--spider", "http://${DISCOVERY_SERVER_URL}:${DISCOVERY_SERVER_PORT}/eureka/apps/client"]
       interval: 5s
       timeout: 5s
-      retries: 15
+      retries: 150
     ports:
       - "8082:8082"
     environment:
@@ -75,6 +78,32 @@ services:
         condition: service_healthy
       cloudserver:
         condition: service_healthy
+
+  msanimal:
+    container_name: ms-animal-inst
+    image: ms-amimal
+    build:
+      context: ./animal
+      dockerfile: docker/Dockerfile
+    healthcheck:
+      test: [ "CMD", "wget", "--spider", "http://${DISCOVERY_SERVER_URL}:${DISCOVERY_SERVER_PORT}/eureka/apps/animal"]
+      interval: 5s
+      timeout: 5s
+      retries: 20
+    environment:
+      - DISCOVERY_SERVER_PORT=${DISCOVERY_SERVER_PORT}
+      - DISCOVERY_SERVER_URL=${DISCOVERY_SERVER_URL}
+    networks:
+      - dicovery-animal-newtwork
+      - gateway-animal-network
+      - config-animal
+      - postgres-animal
+    depends_on:
+      discovery:
+        condition: service_healthy
+      cloudserver:
+        condition: service_healthy
+
   discovery:
     container_name: discovery-inst
     image: discovery
@@ -91,6 +120,7 @@ services:
     networks:
       - dicovery-gateway-network
       - dicovery-client-newtwork
+      - dicovery-animal-newtwork
       - discovery-cloud-server-network
 
   gateway:
@@ -109,20 +139,29 @@ services:
         condition: service_healthy
       msclient:
         condition: service_healthy
+      msanimal:
+        condition: service_healthy
     networks:
       - dicovery-gateway-network
       - gateway-client-network
+      - gateway-animal-network
 
 networks:
   dicovery-gateway-network:
     driver: bridge
   dicovery-client-newtwork:
     driver: bridge
+  dicovery-animal-newtwork:
+    driver: bridge
   gateway-client-network:
+    driver: bridge
+  gateway-animal-network:
     driver: bridge
   discovery-cloud-server-network:
     driver: bridge
   config-client:
+    driver: bridge
+  config-animal:
     driver: bridge
   postgres-client:
     driver: bridge
